Closed Bug 812837 Opened 13 years ago Closed 5 years ago

Search cannot find the Turkish lowercase dotless i aka ı

Categories

(Toolkit :: Find Toolbar, defect, P5)

16 Branch
x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: ilhan, Assigned: alexhenrie24)

References

()

Details

(Keywords: intl)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; rv:16.0) Gecko/20100101 Firefox/16.0 Build ID: 20121024073032 Steps to reproduce: I entered to this page http://tr.wikipedia.org/wiki/T%C3%BCrkiye_il_plaka_kodlar%C4%B1 and then typed Ctr+f then ığdır Actual results: Firefox wasn't able to find Iğdır Expected results: It should have find and highlight the word Iğdır
Component: Untriaged → Search
Component: Search → Find Toolbar
Product: Firefox → Toolkit
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → DUPLICATE
I don't think this is a dupe. The issue as described in comment 0 is that typing "ığdır" doesn't find "Iğdır". This is an issue with language-sensitive case folding, not diacritic folding as in bug 202251.
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: DUPLICATE → ---
Keywords: intl
Not a duplicate, and reproducable in Firefox 28. This needs a fix. Turkish ı/İ was also a case for CSS text-transform, but it was fixed. (See bug 231162)
Priority: -- → P5

Supporting the Turkish dotted capital İ and dotless small ı is exceptionally difficult because rather than create separate Turkish letters i and I, the Unicode consortium has instead made the uppercase and lowercase mappings for the Latin letters i and I dependent on context. However, I think we can get reasonable language-agnostic behavior by making all four letters i/ı/İ/I case-fold to i. It might be slightly annoying to Turkish users that "i" and "ı" will match each other when case sensitivity is off, but it'll be better than the current situation, and that's already the case in Greek with "σ" and "ς" and no one has complained about it.

Assignee: nobody → alexhenrie24
Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a5807fdd13c3 Define the folded case of Turkish variants of "I" to be simply "i". r=jfkthame
Status: REOPENED → RESOLVED
Closed: 13 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: