Bug 812837 - Define the folded case of Turkish variants of "I" to be simply "i". r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D67092